tests/security/taintedFile/output.txt
ERROR: TaintedData - input.hack:1:19 - Detected tainted file handling